--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 	<body>
 		<div id="panel">
 			<h1 class="site-title">快篩地圖</h1>
+			<div class="limits">今天是<span id="limitText"></span></div>
 			<div class="legend">
 				<div class="sufficient">50%以上</div>
 				<div class="warning">49%~21%</div>
