--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 		<link rel="stylesheet" href="//fonts.sandbox.google.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200">
 		<link rel="stylesheet" href="//cdn.jsdelivr.net/npm/pace-js@latest/pace-theme-default.min.css">
 		<link rel="stylesheet" href="style.css">
+		<script async src="//cdn.jsdelivr.net/npm/pace-js@latest/pace.min.js"></script>
 	</head>
 	<body>
 		<div id="panel">
@@ -45,7 +46,6 @@
 			<button class="material-symbols-outlined" id="panelToggle">expand_more</button>
 		</div>
 		<div id="app"></div>
-		<script defer src="main.js"></script>
-		<script defer src="//cdn.jsdelivr.net/npm/pace-js@latest/pace.min.js"></script>
+		<script async src="main.js"></script>
 	</body>
 </html>
