add manual lat & lng fix

--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
 				<li>每 30 秒更新一次資料</li>
 				<li>許多藥局採用號碼牌制，地圖無法得知藥局發放號碼牌的狀況</li>
 				<li>此地圖僅顯示目前尚有存貨的藥局</li>
+				<li>藥局座標錯誤可至 <a href="//www.facebook.com/kai73002981">Facebook</a> 私訊回報</li>
+				<li>藥局座標錯誤可至 <a href="//github.com/kai-tw/RTK-Map">GitHub</a> 回報</li>
 				<li>資料來源：<a href="//data.nhi.gov.tw/Datasets/DatasetDetail.aspx?id=698">健康保險資料開放服務</a></li>
 			</ul>
 			<div class="copyright">本地圖由 <a href="//www.facebook.com/kai73002981">Kai</a> 創作</div>
@@ -38,12 +40,12 @@
 			<div class="row"><span class="material-symbols-outlined">production_quantity_limits</span><span class="content"></span></div>
 			<div class="row"><span class="material-symbols-outlined">update</span><span class="content"></span></div>
 			<div class="row"><span class="material-symbols-outlined">note_alt</span><span class="content"></span></div>
-			<button class="material-symbols-outlined" id="infoPanelClose">close</button>
+			<span class="material-symbols-outlined" id="infoPanelClose">close</span>
 		</div>
 		<div id="control-panel">
-			<button class="material-symbols-outlined" id="mapZoomIn">add</button>
-			<button class="material-symbols-outlined" id="mapZoomOut">remove</button>
-			<button class="material-symbols-outlined" id="panelToggle">expand_more</button>
+			<span class="material-symbols-outlined button" id="mapZoomIn">add</span>
+			<span class="material-symbols-outlined button" id="mapZoomOut">remove</span>
+			<span class="material-symbols-outlined button" id="panelToggle">expand_more</span>
 		</div>
 		<div id="app"></div>
 		<script async src="main.js"></script>
